@@ -1,3 +1,11 @@
+*** 20000824_3 by lusky
+- glines were not matched properly for unidented clients
+
+
+*** 20000824_2 by lusky
+- changed Q:line behaviour for NICKs to just return ERR_ERRONEUSNICKNAME
+
+
 *** 20000824_1 by lusky
 - server_estab() - mask IP in the op notices, but log the real ip
 - disable wildcards in WHOIS (configurable for now)
